welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:5: error: not found: value getMondLargeur
  if ((x==getMondeLargeur()-1&&k2>0)) {y=y+1;x=0;k2 = -1} else {if (x==0&&k2<1) {y=y+1;x=getMondLargeur();k2=1} elsex=x+k2}
                                                                                         ^ZigZag:5: error: value elsex is not a member of Unit
  if ((x==getMondeLargeur()-1&&k2>0)) {y=y+1;x=0;k2 = -1} else {if (x==0&&k2<1) {y=y+1;x=getMondLargeur();k2=1} elsex=x+k2}
                                                                                                                ^